--- a/petsapp/app/src/main/AndroidManifest.xml
+++ b/petsapp/app/src/main/AndroidManifest.xml
@@ -2,16 +2,22 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.pets">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
+        android:name=".MainApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Pets">
+        android:theme="@style/Theme.Pets"
+        android:usesCleartextTraffic="true">
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
+            android:name="com.example.pets.presentation.feature.anyway.AnywayActivity"
+            android:exported="true"
+            android:theme="@style/Theme.Pets.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
