--- a/petsapp/app/build.gradle
+++ b/petsapp/app/build.gradle
@@ -44,6 +44,7 @@ ext {
     retrofit_version = "2.9.0"
     koin_version = "2.1.5"
     room_version = "2.4.0"
+    fotoapparat_version = "2.7.0"
 }
 
 dependencies {
@@ -81,4 +82,7 @@ dependencies {
     //Room
     implementation("androidx.room:room-runtime:$room_version")
     kapt("androidx.room:room-compiler:$room_version")
+
+    //Fotoapparat
+    implementation "io.fotoapparat:fotoapparat:$fotoapparat_version"
 }
